[build-system]
requires = ["hatchling>=1.12.1"]
build-backend = "hatchling.build"

[project]
name = "unq"
description = "Simple rate limiter library using thread-safe queues."
readme = "README.md"
version = "1.0.0"
requires-python = ">=3.11"
dependencies = [

]
authors = [
    {name = "Egor Matuk", email = "gregory.matuk2004@gmail.com"}
]
maintainers = [
    {name = "Egor Matuk", email = "gregory.matuk2004@gmail.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License"
]